[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4"

# [[bench]]
# name = "palindrome"
# harness = false

# [[bench]]
# name = "easy_binary_search"
# harness = false

# [[bench]]
# name = "max_profit"
# harness = false

# [[bench]]
# name = "remove"
# harness = false

# [[bench]]
# name = "remove_duplicates"
# harness = false

[[bench]]
name = "rotate"
harness = false