[package]
name = "sprout-therapy-assignment"
version = "0.1.0"
authors = ["Julia Naomi <jnboeira@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-rt = "1.0.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.44"
serde_derive = "1.0.104"
num_cpus = "1.0"
fort = "0.3"
bastion = "0.3.4"
uuid = { version = "0.7", features = ["serde", "v4"] }
env_logger = "0.7.1"
log = "0.4"

[dev-dependencies]
bytes = "0.5.3"
actix-service = "1.0.5"